k8s-manifests/cmak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cmak
  namespace: cmak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cmak
  template:
    metadata:
      labels:
        app: cmak
    spec:
      containers:
      - name: cmak
        image: paulrobu/cmak:latest    # <- from https://hub.docker.com/r/paulrobu/cmak/tags
        ports:
        - containerPort: 9000
