k8s-manifests/cmak-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cmak
  namespace: cmak
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-cmak.paul
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: cmak
              servicePort: 8080
